# TundraUX3

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/app/src/application/: catalog.rs  mod.rs  notification.rs  state.rs
crates/app/src/diagnostics/: mod.rs
crates/app/src/editor/: markdown_codec.rs  mod.rs  recovery.rs  rich_document.rs  rich_edit.rs
crates/app/src/explorer/: mod.rs  tasks.rs
crates/app/src/launcher/: mod.rs
crates/app/tests/: editor.rs  explorer.rs  explorer_tasks.rs  launcher.rs
crates/cli/: Cargo.toml
crates/cli/src/: arguments.rs  config_command.rs  doctor.rs  help_text.rs  lib.rs  main.rs  path_report.rs  runner.rs  storage_reset.rs  weathr_command.rs
crates/cli/tests/: parser.rs
crates/identity/: Cargo.toml
crates/identity/src/: credentials.rs  error.rs  identity.rs  session_service.rs  time.rs  user_service.rs
crates/identity/tests/: identity_security.rs
crates/shell/: Cargo.toml  build.rs
crates/shell/src/: banner.rs  clock_scheduler.rs  first_run_banner.rs  input_events.rs  launch_args.rs  lib.rs  main.rs  notification_center.rs  shell_commands.rs  shell_components.rs  shortcuts.rs  startup.rs  startup_banner.rs  terminal_events.rs  terminal_session.rs  terminal_size.rs
crates/shell/src/session/: construction.rs  mod.rs  queries.rs  runtime.rs  tests.rs  ui_state.rs
crates/shell/src/session/controller/: account.rs  clock.rs  command_dispatch.rs  diagnostics.rs  editor.rs  editor_tasks.rs  explorer.rs  explorer_tasks.rs  focus_navigation.rs  hit_testing.rs  home_navigation.rs  input_diagnostics.rs  input_routing.rs  launcher.rs  mod.rs  (+6 more)
crates/shell/tests/: account_workflows.rs  editor.rs  explorer.rs  settings.rs  smoke.rs  startup.rs  state.rs
crates/tundra-apps/: Cargo.toml
crates/tundra-apps/src/: diagnostics.rs  editor.rs  editor_recovery.rs  explorer.rs  explorer_tasks.rs  launcher.rs  lib.rs  markdown_codec.rs  rich_document.rs  rich_edit.rs
crates/tundra-apps/tests/: editor.rs  explorer.rs  explorer_tasks.rs  launcher.rs
crates/tundra-cli/: Cargo.toml
crates/tundra-cli/src/: arguments.rs  config_command.rs  doctor.rs  help_text.rs  lib.rs  main.rs  path_report.rs  runner.rs  storage_reset.rs  weathr_command.rs
crates/tundra-cli/tests/: parser.rs
crates/tundra-core/: Cargo.toml
crates/tundra-core/src/: audit_log.rs  authorization.rs  error.rs  identity.rs  lib.rs  session_service.rs  user_service.rs
crates/tundra-core/tests/: identity_security.rs  phase5.rs
crates/tundra-shell/: Cargo.toml  build.rs
crates/tundra-shell/src/: account_workflows.rs  banner.rs  clock_scheduler.rs  clock_workflows.rs  command_dispatch.rs  diagnostics_workflows.rs  editor_task_workflows.rs  editor_workflows.rs  explorer_task_workflows.rs  explorer_workflows.rs  first_run_banner.rs  focus_navigation.rs  hit_testing.rs  home_navigation.rs  input_diagnostics.rs  input_events.rs  input_routing.rs  launch_args.rs  launcher_task_workflows.rs  launcher_workflows.rs  lib.rs  main.rs  notification_center.rs  notification_workflows.rs  runtime.rs  settings_workflows.rs  shell_commands.rs  shell_components.rs  shell_state.rs  shell_unit_tests.rs  shortcuts.rs  startup.rs  startup_banner.rs  state_construction.rs  state_queries.rs  terminal_events.rs  terminal_session.rs  terminal_size.rs  time_sync.rs  user_management_workflows.rs  (+2 more)
crates/tundra-shell/tests/: account_workflows.rs  editor.rs  explorer.rs  phase5_auth.rs  phase6_explorer.rs  settings.rs  smoke.rs  startup.rs  state.rs
crates/tundra-ui/: Cargo.toml
crates/tundra-ui/assets/: home_icons.toml
crates/tundra-ui/src/: command.rs  editor.rs  editor_media.rs  focus.rs  hit_test.rs  home_icons.rs  input.rs  launcher.rs  layout.rs  lib.rs  render.rs  settings.rs  setup_catalog.rs  theme.rs  timezone_map.rs  view_model.rs
crates/tundra-ui/src/components/: button.rs  command_palette.rs  context_menu.rs  dialog.rs  foundation.rs  list.rs  mod.rs  tabs.rs  text_input.rs
crates/tundra-ui/tests/: clock.rs  components.rs  diagnostics.rs  editor.rs  explorer.rs  home.rs  input_routing.rs  interaction_foundations.rs  launcher.rs  phase2_foundations.rs  phase2_input_routing.rs  settings.rs  setup.rs  user_management.rs
crates/tundra-weathr/: Cargo.toml
crates/tundra-weathr/src/: animation_manager.rs  app.rs  app_state.rs  assets.rs  cache.rs  config.rs  error.rs  geolocation.rs  launch.rs  lib.rs  network_clock.rs
crates/tundra-weathr/src/animation/: airplanes.rs  clouds.rs  mod.rs  moon.rs  sunny.rs
crates/tundra-weathr/src/render/: clock.rs  mod.rs
crates/tundra-weathr/src/scene/: lockscreen.rs  mod.rs  overlay.rs
crates/tundra-weathr/src/weather/: client.rs  mod.rs  normalizer.rs  types.rs  units.rs
crates/ui/: Cargo.toml
crates/ui/assets/: README.md  timezone-map-2026b-raster.txt
crates/ui/src/: lib.rs
crates/ui/src/assets/: home_icons.rs  mod.rs  setup_catalog.rs
crates/ui/src/components/: button.rs  command_palette.rs  context_menu.rs  dialog.rs  foundation.rs  list.rs  mod.rs  tabs.rs  text_input.rs
crates/ui/src/foundation/: command.rs  focus.rs  hit_test.rs  input.rs  intent.rs  mod.rs
crates/ui/src/screens/: launcher.rs  mod.rs  settings.rs  timezone_map.rs
crates/ui/src/theme/: mod.rs
crates/ui/tests/: clock.rs  components.rs  diagnostics.rs  editor.rs  explorer.rs  home.rs  input_events.rs  input_routing.rs  interaction_foundations.rs  launcher.rs  settings.rs  setup.rs  user_management.rs
crates/watchdog/: Cargo.toml  README.md
crates/watchdog/src/: durable.rs  lib.rs  model.rs  report_catalog.rs  sanitize.rs  task.rs
crates/weathr/: Cargo.toml
crates/weathr/src/: animation_manager.rs  app.rs  assets.rs  cache.rs  error.rs  geolocation.rs  launch.rs  lib.rs
crates/weathr/src/animation/: birds.rs  chimney.rs  clouds.rs  fireflies.rs  fog.rs  leaves.rs  moon.rs  raindrops.rs  snow.rs  stars.rs  sunny.rs  system.rs  thunderstorm.rs
crates/weathr/src/render/: clock.rs
crates/weathr/src/theme/: catalogue.rs  mod.rs
crates/weathr/src/weather/: client.rs
(+177 files in other folders)
