[workspace]
members = [
    "crates/tundra-apps",
    "crates/tundra-cli",
    "crates/tundra-core",
    "crates/tundra-platform",
    "crates/tundra-shell",
    "crates/tundra-storage",
    "crates/tundra-ui",
    "crates/tundra-weathr",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
