[workspace]
members = [
    "crates/app",
    "crates/ascii-assets",
    "crates/cli",
    "crates/identity",
    "crates/platform",
    "crates/shell",
    "crates/storage", "crates/time",
    "crates/ui",
    "crates/watchdog",
    "crates/weathr",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "unwind"
