[package]
name = "app"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
comrak = { version = "0.54", default-features = false }
ropey = { version = "1.6", default-features = false, features = ["cr_lines", "simd"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ascii-assets = { path = "../ascii-assets" }
identity = { path = "../identity" }
platform = { path = "../platform" }
storage = { path = "../storage" }
watchdog = { path = "../watchdog" }
unicode-segmentation = "1.12"
unicode-width = "0.2"
time = { version = "0.1.0", path = "../time" }
