[package]
name = "tundra-apps"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
serde_json = "1"
tundra-ascii-assets = { path = "../tundra-ascii-assets" }
tundra-core = { path = "../tundra-core" }
tundra-platform = { path = "../tundra-platform" }
tundra-storage = { path = "../tundra-storage" }
tundra-watchdog = { path = "../tundra-watchdog" }
