[package]
name = "tundra-apps"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
comrak = { version = "0.54", default-features = false }
ropey = { version = "1.6", default-features = false, features = ["cr_lines", "simd"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tundra-ascii-assets = { path = "../tundra-ascii-assets" }
tundra-core = { path = "../tundra-core" }
tundra-platform = { path = "../tundra-platform" }
tundra-storage = { path = "../tundra-storage" }
tundra-watchdog = { path = "../tundra-watchdog" }
unicode-segmentation = "1.12"
unicode-width = "0.2"
