[package]
name = "tundra-cli"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "tundra-cli"
path = "src/main.rs"

[dependencies]
tundra-platform = { path = "../tundra-platform" }
tundra-storage = { path = "../tundra-storage" }
tundra-ui = { path = "../tundra-ui" }
tundra-weathr = { path = "../tundra-weathr" }
