[package]
name = "tundra-core"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tundra-storage = { path = "../tundra-storage" }

argon2 = "0.5"
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tundra-platform = { path = "../tundra-platform" }
