[package]
name = "tundra-shell"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "tundra-shell"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
tundra-platform = { path = "../tundra-platform" }
tundra-apps = { path = "../tundra-apps" }
tundra-core = { path = "../tundra-core" }
tundra-storage = { path = "../tundra-storage" }
tundra-ui = { path = "../tundra-ui" }
tundra-weathr = { path = "../tundra-weathr" }

[build-dependencies]
tundra-ascii-assets = { path = "../tundra-ascii-assets" }
