[package]
name = "ui"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
geojson = "1.0"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
ratatui = "0.29"
ratatui-image = { version = "=8.0.1", default-features = false, features = ["crossterm"] }
app = { path = "../app" }
ascii-assets = { path = "../ascii-assets" }
zip = { version = "6", default-features = false, features = ["deflate"] }

[build-dependencies]
ascii-assets = { path = "../ascii-assets" }
