[package]
name = "watchdog"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
test-support = []
tokio = ["dep:futures-util", "dep:tokio"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3", optional = true }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"], optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
