[package]
name = "weathr"
version.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later"
authors = ["Dony Mulya <veirt@duck.com>"]
description = "TundraUX-integrated terminal ASCII weather scene renderer"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
crossterm = "0.28"
dirs = "6.0"
rand = "0.10"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
    "signal",
    "fs",
] }
toml = "0.9"
ascii-assets = { path = "../ascii-assets" }
time = { version = "0.1.0", path = "../time" }
watchdog = { path = "../watchdog", features = ["tokio"] }

[dev-dependencies]
watchdog = { path = "../watchdog", features = ["test-support"] }
